<resources>
    <string name="demoUserId">-10000</string>
    <string name="app_name">5G网速测试</string>
    <string name="app_name_show">5G网速测试</string>
    <string name="app_exit">再按一次退出</string>
    <string name="macrostation">宏站</string>
    <string name="macrostation_guihua">规划</string>
    <string name="macrostation_sheji">设计</string>
    <string name="macrostation_kaizhan">开站</string>
    <string name="roomstation">室分</string>
    <string name="roomstation_kancha">勘察</string>
    <string name="roomstation_shigong">施工</string>
    <string name="roomstation_yanshou">验收</string>
    <string name="roomstation_xunjian">巡检</string>
    <string name="hint_user">请输入网优宝帐号</string>
    <string name="hint_user_4a">请输入4A帐号</string>
    <string name="hint_passwd">请输入网优宝密码</string>
    <string name="hint_passwd_4a">请输入4A密码</string>
    <string name="hint_code">输入验证码</string>
    <string name="hint_code_sms">输入短信验证码</string>
    <string name="obtain_code">获取短信验证码</string>
    <string name="hint_search_address">请输入地点关键字</string>
    <string name="other">其他</string>
    <string name="gis_show">GIS呈现</string>
    <string name="other_book">资料分享</string>
    <string name="mapline_down">离线地图</string>
    <string name="other_upload">上传</string>
    <string name="menu_help">帮助信息</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="login">登录</string>
    <string name="save">保存</string>
    <string name="remake">重拍</string>
    <string name="tourist">游客访问</string>
    <string name="saveColor">应用本页设置</string>
    <string name="layer_yd">移动</string>
    <string name="layer_lt">联通</string>
    <string name="layer_dx">电信</string>
    <string name="layer_ql">全量</string>
    <string name="layer_ydlt">移动联通共享</string>
    <string name="layer_yddx">移动电信共享</string>
    <string name="layer_ltdx">联通电信共享</string>
    <string name="layer_all">移动联通电信</string>
    <string name="layer_zj">在建</string>
    <string name="layer_zw">在网</string>
    <string name="toastinfo">消息提醒</string>
    <string name="set">设置</string>
    <string name="hint_toast">基站审核未通过通知</string>
    <string name="celar_toast">清空所有提醒</string>
    <string name="sign_yes">全部标记已读</string>
    <string name="newStation">新建基站</string>
    <string name="selectRwType">请选择基站属性(单选)</string>
    <string name="stationNameHint">请输入基站名</string>
    <string name="stationNameH">福州鼓楼-邮电公寓-NLH</string>
    <string name="enbid">ENB ID</string>
    <string name="enbidH">例如:214364</string>
    <string name="ckzp"><u>查看照片</u></string>
    <string name="ljsc">立即上传</string>
    <string name="scsx">上传所选</string>
    <string name="mapadd">地图打点</string>
    <string name="china_mobile">中国移动</string>
    <string name="china_telecom">中国电信</string>
    <string name="china_unicom">中国联通</string>
    <string name="html_blue_text"><![CDATA[<font color="blue">%1$s</font>]]></string>
    <string name="notphoto_toast">请选定需要特殊说明的模块(可多选)</string>
    <string name="notphoto_toast2">确定后将不审核所选项目的照片数量</string>
    <string name="notphoto_hint_et">请输入最多不可超过五百个字的特殊说明</string>
    <string name="notphoto_problem_description">特殊问题说明：</string>
    <string name="notphoto">未拍照特殊说明</string>
    <string name="bbu_camera">站址外观</string>
    <string name="baogan_camera">抱杆远景图</string>
    <string name="sf_camera">室分天线拍摄</string>
    <string name="rru_camera">RRU</string>
    <string name="bitian">(必填)</string>
    <string name="photp_pz">拍照</string>
    <string name="photo_xc">相册</string>
    <string name="rru_device">设备</string>
    <string name="photo_example">正确示例：</string>
    <string name="rru_height">挂高</string>
    <string name="direction">方位角</string>
    <string name="downangel">下倾角</string>
    <string name="pingtai">平台值：</string>
    <string name="shiji">实际值：</string>
    <string name="celiang">测量值：</string>
    <string name="pt_cl_db">偏差率：</string>
    <string name="default_date">2015年1月1日</string>
    <string name="please_input">请输入…</string>
    <string name="rwst_exception">异常原因</string>
    <string name="rwst_sign_jianse">建设人员：</string>
    <string name="rwst_sign_jianse_sign">建设人员签名*</string>
    <string name="rwst_sign_weihu">维护人员：</string>
    <string name="rwst_sign_weihu_sign">维护人员签名*</string>
    <string name="rwst_sign_wangyou">网优人员：</string>
    <string name="rwst_sign_wangyou_sign">网优人员签名*</string>
    <string name="rwst_checkpoints">单站现场验证结论：</string>
    <string name="rwst_sgdw">施工单位：</string>
    <string name="rwst_ysrq">验收日期：</string>
    <string name="rw_project_check">检查项目</string>
    <string name="rw_site_whole_check">站点完整性</string>
    <string name="rw_room_safe_check">机房安全</string>
    <string name="rw_device_safe_check">设备安全</string>
    <string name="rw_fljd">防雷接地</string>
    <string name="rw_sign">签名</string>
    <string name="noData">暂无数据</string>
    <string name="rw_addsite_suc">添加基站成功</string>
    <string name="rw_addsite_failed">添加基站失败</string>
    <string name="rw_jw">入网交维</string>
    <string name="rw_hzyz">宏站验证</string>
    <string name="rw_sfyz">室分验证</string>
    <string name="add_site">新增基站</string>
    <string name="compelete_site">完成验证</string>
    <string name="add_sfwork">新增工程</string>
    <string name="rwst_number">数量：</string>
    <string name="rwst_name">站名：</string>
    <string name="rwst_date">日期：</string>
    <string name="rwst_configure">配置：</string>
    <string name="rwst_sblx">设备类型：</string>
    <string name="rwst_ylwt">遗漏问题说明：</string>
    <string name="rwst_normal">正常</string>
    <string name="rwst_success">通过</string>
    <string name="rwst_notCheck">未测试</string>
    <string name="rwst_rru_motxcs">RRU及末端天线测试</string>
    <string name="rwst_rru_krtest">扩容RRU测试</string>
    <string name="rwst_zmcrkqhcs">正门出入口切换测试</string>
    <string name="rwst_switching_test">切换测试</string>
    <string name="rwst_wytx_dt_test">外引天线DT测试</string>
    <string name="rwst_wytx_cqt_test">外引天线CQT测试</string>
    <string name="rwst_switching_occurs">发生切换eNB</string>
    <string name="rwst_dtcrkqhcs">电梯出入口切换测试</string>
    <string name="rwst_tcccrkqhcs">停车场出入口切换测试</string>
    <string name="rwst_sfxqjqhcs">室分小区间切换测试</string>
    <string name="rwst_automatic">自动测试</string>
    <string name="rwst_sfxqjqhsfzc">室分小区间切换是否正常</string>
    <string name="rwst_xqjqhsfzc">小区间切换是否正常</string>
    <string name="rwst_btzjqhsfzc">不同站间切换是否正常</string>
    <string name="rwst_volte_test">(需支持VOLTE功能手机)VOLTE测试</string>
    <string name="rwst_voice_test">语音测试</string>
    <string name="rwst_voice_point_net">语音点用网络</string>
    <string name="rwst_234_net">2G/3G/4G</string>
    <string name="rwst_csfb">CSFB测试</string>
    <string name="rwst_volte_function">VOLTE功能</string>
    <string name="rwst_stopnumber">站号：</string>
    <string name="works">制式:</string>
    <string name="rwst_enb">enb：</string>
    <string name="rwst_rruid">rruid：</string>
    <string name="hint_rwst_workno">XUQI20150918TDLLZGLZZ000022</string>
    <string name="hint_only_number">只能输入数字</string>
    <string name="hint_only_name">此处输入物业点或小区名</string>
    <string name="rwst_rruid_hint">请输入RRU ID</string>
    <string name="rwst_rrucount_hint">请输入RRU数量</string>
    <string name="submit">提交</string>
    <string name="upload_log">道路/基站测试log</string>
    <string name="upload_other">其它</string>
    <string name="click_test"><u>点此测试</u></string>
    <string name="no_limit">不限</string>
    <string name="s_city">地市：</string>
    <string name="s_address">地址：</string>
    <string name="s_area">区县：</string>
    <string name="s_area2">地区：</string>
    <string name="s_type">类型：</string>
    <string name="s_ztype">站型：</string>
    <string name="s_zstep">站阶段：</string>
    <string name="s_keyword">关键字：</string>
    <string name="s_enbci">enbid/CI：</string>
    <string name="s_search">检索</string>
    <string name="s_reset">重置</string>
    <string name="s_keyword_hint">请输入关键字…</string>
    <string name="s_enbci_hint">请输入enbid/CI…</string>
    <string name="s_ttdw">铁塔单位：</string>
    <string name="s_whlx">维护类型：</string>
    <string name="s_search_result">搜索结果</string>
    <string name="site_whzt">维护状态:</string>
    <string name="site_cqdw">产权单位:</string>
    <string name="site_name">站点名称:</string>
    <string name="site_type">站点类型:</string>
    <string name="site_direction">方位角:</string>
    <string name="site_xiaqing">下倾角:</string>
    <string name="site_xiaqing_jx">机械下倾角:</string>
    <string name="site_xiaqing_d">电下倾角:</string>
    <string name="site_line_high">天线高度:</string>
    <string name="site_gaotie_type">覆盖类型:</string>
    <string name="site_detail">详细信息</string>
    <string name="site_detail_title">基站详情</string>
    <string name="shousuo">收缩</string>
    <string name="check_proj_zdwzx">站点完整性</string>
    <string name="check_proj_jfaq">机房安全</string>
    <string name="check_proj_sbaq">设备安全</string>
    <string name="local_db_chagesuc">本地工参切换成功</string>
    <string name="site_lay">基站图层</string>
    <string name="site_gps">基站定位</string>
    <string name="gc_path">工参路径</string>
    <string name="broswer">浏览</string>
    <string name="ok">确定</string>
    <string name="ok_made">确认创建</string>
    <string name="cancel">取消</string>
    <string name="cancel_c">取消所选</string>
    <string name="model">模板</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="deletes">✘删除</string>
    <string name="stop">停止</string>
    <string name="goup">↑</string>
    <string name="godown">↓</string>
    <string name="time_promp">剩余时间: MM分SS秒</string>
    <string name="importing">正在导入…</string>
    <string name="sdpath_null">SD卡不存在，请检查SD卡是否被拔出或挂起</string>
    <string name="col_notall">字段匹配不全</string>
    <string name="jzgcxz">基站工参下载</string>
    <string name="table_exist">检查到数据表已存在，是否立即替换？</string>
    <string name="gcxz">工参下载</string>
    <string name="outside_site">宏站</string>
    <string name="inside_site">室分</string>
    <string name="layer_choose">图层选择</string>
    <string name="choose_all">全选</string>
    <string name="unchoose_all">反选</string>
    <string name="gsm_cell">GSM小区</string>
    <string name="tds_cell">TDS小区</string>
    <string name="lte_cell">LTE小区</string>
    <string name="lte_guihua">LTE规划</string>
    <string name="cell_tieta">竞对基站</string>
    <string name="ltegh_outside_site1">已规划库　</string>
    <string name="ltegh_outside_site2">立项站点库</string>
    <string name="ltegh_outside_site3">设计站点库</string>
    <string name="ltegh_outside_site4">建成站点库</string>
    <string name="ltegh_inside_site1">已规划库　</string>
    <string name="ltegh_inside_site2">立项站点库</string>
    <string name="ltegh_inside_site3">设计站点库</string>
    <string name="ltegh_inside_site4">建成站点库</string>
    <string name="gaotie_sn">室内</string>
    <string name="gaotie_sw">室外</string>
    <string name="sign_me">本人</string>
    <string name="sign_dy">代验</string>
    <string name="seleces">已选：</string>
    <string name="otherFunction">其他功能</string>
    <string name="wq_menu_upload">测试LOG上传及分享</string>
    <string name="wq_menu_update">版本信息</string>
    <string name="wq_menu_feedback">意见反馈</string>
    <string name="wq_menu_gis_show_name">是否显示GIS图层基站名称</string>
    <string name="wq_menu_is_wifi">只允许WIFI传输被动数据</string>
    <string name="nowAddress">当前位置：</string>
    <string name="colorSet">调色板</string>
    <string name="gpsing">GPS初始化中....</string>
    <string name="useIv">使用图片</string>
    <string name="abandon">放弃</string>
    <string name="signal_pci">PCI</string>
    <string name="signal_ci">CI</string>
    <string name="signal_rsrp">RSRP</string>
    <string name="signal_rsrp2">RSRP2</string>
    <string name="signal_sinr">SINR</string>
    <string name="signal_sinr2">SINR2</string>
    <string name="band">BAND</string>
    <string name="ci">CI</string>
    <string name="pleaseKeep">请保持手机水平</string>
    <string name="testLocking">任意点击屏幕锁定测量值</string>
    <string name="cell_pci">PCI</string>
    <string name="cell_rsrp">RSRP</string>
    <string name="cell_last_lte">最近LTE信号记录</string>
    <string name="cell_time">Time</string>
    <string name="jzxh_nsa_time">TIME</string>
</resources>