<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:id="@+id/azimuthTest_view_layout" android:onClick="onClickListener"
    android:orientation="vertical" android:background="@drawable/drawable_supter_title_bg">
    
    <cn.nokia.speedtest5g.view.actionbar.MyActionBar
	       android:id="@+id/actionbar"
	       style="@style/ActionBar"/>

    <RelativeLayout android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_weight="1">
        <ImageView style="@style/tv_warp" android:src="@drawable/icon_azimuth_test_center_round" android:layout_centerInParent="true" android:contentDescription="@string/app_name"/>
       	<ImageView style="@style/tv_warp" android:src="@drawable/icon_azimuth_test_center_x" android:layout_centerInParent="true" android:contentDescription="@string/app_exit"/>
      	<ImageView style="@style/tv_warp" android:src="@drawable/icon_azimuth_test_top_indicator" android:paddingRight="5dp" android:layout_marginTop="30dp" android:layout_centerHorizontal="true" android:contentDescription="@string/hint_user"/>
        <ImageView android:id="@+id/azimuthTest_iv_disc" style="@style/tv_warp" android:src="@drawable/icon_azimuth_test_disc" android:layout_centerInParent="true" android:contentDescription="@string/obtain_code"/>
    </RelativeLayout>
	<RelativeLayout android:layout_marginBottom="20dp" android:layout_width="match_parent" android:layout_height="wrap_content">
	    <TextView android:id="@+id/azimuthTest_tv_azimuth" style="@style/tv_warp" android:textSize="36sp" android:textColor="@color/white" android:layout_centerHorizontal="true"/>
	    <TextView android:id="@+id/azimuthTest_tv_direction" style="@style/tv_warp" android:layout_margin="8dp" android:layout_toRightOf="@+id/azimuthTest_tv_azimuth" android:layout_alignBottom="@+id/azimuthTest_tv_azimuth" android:textSize="@dimen/tv_small_size" android:textColor="@color/white"/>
	</RelativeLayout>    
	<LinearLayout android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
	   <TextView android:id="@+id/azimuthTest_tv_lon" style="@style/tv_weight" android:textColor="@color/white" android:textSize="@dimen/tv_half_size"/> 
	   <TextView android:id="@+id/azimuthTest_tv_lat" android:layout_marginLeft="10dp" style="@style/tv_weight" android:textColor="@color/white" android:textSize="@dimen/tv_half_size"/> 
	</LinearLayout>    
	<TextView android:id="@+id/azimuthTest_tv_toast" android:layout_gravity="center_horizontal" android:text="@string/testLocking" style="@style/tv_warp" android:layout_margin="20dp" android:textColor="@color/white" android:textSize="@dimen/tv_half_size"/>
</LinearLayout>
