<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    android:paddingBottom="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/module_bg_color"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/jzxhList_tv_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="5dp"
            android:text="@string/cell_last_lte"
            android:textColor="@color/gray_c0c0c3"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/jzxhList_ibtn_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@null"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="@dimen/dp_10"
            android:paddingTop="5dp"
            android:src="@drawable/icon_sdwq"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/jzxhList_iv_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@null"
            android:contentDescription="@null"
            android:src="@drawable/icon_jzxh_nsa_setting" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:id="@+id/jzxhList_tv_time"
                    style="@style/tv_cellsignal_lst_title"
                    android:layout_weight="1.2"
                    android:text="@string/cell_time"
                    android:textColor="@color/gray_c0c0c3" />

                <TextView
                    android:id="@+id/jzxhList_tv_ci"
                    style="@style/tv_cellsignal_lst_title"
                    android:text="@string/signal_ci"
                    android:textColor="@color/gray_c0c0c3" />

                <TextView
                    android:id="@+id/jzxhList_tv_rsrp"
                    style="@style/tv_cellsignal_lst_title"
                    android:text="@string/signal_rsrp"
                    android:textColor="@color/gray_c0c0c3" />

                <TextView
                    android:id="@+id/jzxhList_tv_sinr"
                    style="@style/tv_cellsignal_lst_title"
                    android:text="@string/signal_sinr"
                    android:textColor="@color/gray_c0c0c3" />

                <TextView
                    android:id="@+id/jzxhList_tv_pci"
                    style="@style/tv_cellsignal_lst_title"
                    android:text="@string/signal_pci"
                    android:textColor="@color/gray_c0c0c3" />

                <TextView
                    android:id="@+id/jzxhList_tv_rsrp2"
                    style="@style/tv_cellsignal_lst_title"
                    android:text="@string/signal_rsrp2"
                    android:textColor="@color/gray_c0c0c3"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/jzxhList_tv_sinr2"
                    style="@style/tv_cellsignal_lst_title"
                    android:text="@string/signal_sinr2"
                    android:textColor="@color/gray_c0c0c3"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/jzxhList_tv_band"
                    style="@style/tv_cellsignal_lst_title"
                    android:layout_weight="1.5"
                    android:text="@string/band"
                    android:textColor="@color/gray_c0c0c3" />
            </LinearLayout>

            <View style="@style/style_sp_x" />

            <ListView
                android:id="@+id/jzxhList_listview"
                style="@style/style_listview_wrap"
                android:background="@color/bg_color"
                android:divider="@color/line_color"
                android:dividerHeight="1px"
                android:fadingEdge="none"
                android:overScrollMode="never"
                android:scrollbars="none" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/jzxhList_layout_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/module_bg_color"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/jzxhList_ck_time"
                    style="@style/tv_weight"
                    android:button="@drawable/jj_check_box_blue_gray_circle"
                    android:paddingBottom="5dp"
                    android:paddingLeft="2dp"
                    android:paddingTop="5dp"
                    android:singleLine="true"
                    android:text="@string/jzxh_nsa_time"
                    android:textColor="@color/color_blacksmall_black"
                    android:textSize="@dimen/tv_micro_size"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/jzxhList_ck_ci"
                    style="@style/tv_weight"
                    android:button="@drawable/jj_check_box_blue_gray_circle"
                    android:paddingBottom="5dp"
                    android:paddingLeft="2dp"
                    android:paddingTop="5dp"
                    android:text="@string/ci"
                    android:textColor="@color/color_blacksmall_black"
                    android:textSize="@dimen/tv_micro_size"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/jzxhList_ck_rsrp"
                    style="@style/tv_weight"
                    android:button="@drawable/jj_check_box_blue_gray_circle"
                    android:paddingBottom="5dp"
                    android:paddingLeft="2dp"
                    android:paddingTop="5dp"
                    android:singleLine="true"
                    android:text="@string/cell_rsrp"
                    android:textColor="@color/color_blacksmall_black"
                    android:textSize="@dimen/tv_micro_size"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/jzxhList_ck_sinr"
                    style="@style/tv_weight"
                    android:button="@drawable/jj_check_box_blue_gray_circle"
                    android:paddingBottom="5dp"
                    android:paddingLeft="2dp"
                    android:paddingTop="5dp"
                    android:text="@string/signal_sinr"
                    android:textColor="@color/color_blacksmall_black"
                    android:textSize="@dimen/tv_micro_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/jzxhList_ck_pci"
                    style="@style/tv_weight"
                    android:button="@drawable/jj_check_box_blue_gray_circle"
                    android:paddingBottom="5dp"
                    android:paddingLeft="2dp"
                    android:paddingTop="5dp"
                    android:text="@string/cell_pci"
                    android:textColor="@color/color_blacksmall_black"
                    android:textSize="@dimen/tv_micro_size"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/jzxhList_ck_rsrp2"
                    style="@style/tv_weight"
                    android:button="@drawable/jj_check_box_blue_gray_circle"
                    android:paddingBottom="5dp"
                    android:paddingLeft="2dp"
                    android:paddingTop="5dp"
                    android:text="@string/signal_rsrp2"
                    android:textColor="@color/color_blacksmall_black"
                    android:textSize="@dimen/tv_micro_size"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/jzxhList_ck_sinr2"
                    style="@style/tv_weight"
                    android:button="@drawable/jj_check_box_blue_gray_circle"
                    android:paddingBottom="5dp"
                    android:paddingLeft="2dp"
                    android:paddingTop="5dp"
                    android:text="@string/signal_sinr2"
                    android:textColor="@color/color_blacksmall_black"
                    android:textSize="@dimen/tv_micro_size"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/jzxhList_ck_band"
                    style="@style/tv_weight"
                    android:button="@drawable/jj_check_box_blue_gray_circle"
                    android:paddingBottom="5dp"
                    android:paddingLeft="2dp"
                    android:paddingTop="5dp"
                    android:text="@string/band"
                    android:textColor="@color/color_blacksmall_black"
                    android:textSize="@dimen/tv_micro_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp" >

                <Button
                    android:id="@+id/jzxhList_btn_tagOk"
                    style="@style/tv_warp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/drawable_login_btn_bg"
                    android:paddingBottom="8dp"
                    android:paddingLeft="35dp"
                    android:paddingRight="35dp"
                    android:paddingTop="8dp"
                    android:text="@string/ok"
                    android:textColor="@color/white_edeeee"
                    android:textSize="@dimen/tv_micro_size" />
            </FrameLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>